
Version (SVN)
-------------

All:   Fixed bug CASTOR-1412 using contribution from Martin Fuchs [martin-fuchs@gmx.net]
       Remove dependency to Adaptx and Xerces from the documentation build step.
       Details: http://jira.codehaus.org/browse/CASTOR-1412
       (Martin - 20060426)

JDO:   Fixed bug CASTOR-1411 using contribution from Ralf Joachim [ralf.joachim@syscon-world.de]
       Replaced Object[] parameters at SQLEngine by ProposedEntity.
       Details: http://jira.codehaus.org/browse/CASTOR-1411
       (Ralf - 20060426)

XML:   Fixed bug CASTOR-1382 using contribution from David Buschman [dbuschman7@yahoo.com]
       Fixed wrongly coded boolean expresions.
       Details: http://jira.codehaus.org/browse/CASTOR-1382
       (Werner - 20060426)

All:   Fixed bug CASTOR-1410 using contribution from Martin Fuchs [martin-fuchs@gmx.net]
       Fixed broken links to cvs.html (replaced with scm.html).
       Details: http://jira.codehaus.org/browse/CASTOR-1410
       (Werner - 20060426)
       
All:   Fixed bug CASTOR-1397 using contribution from Henk van Voorthujsen [voorth@xs4all.nl]
       Fixed compiler warnings: 212 unnecessary else clauses.
       Details: http://jira.codehaus.org/browse/CASTOR-1397
       (Ralf - 20060425)

JDO:   Fixed bug CASTOR-1407 using contribution from Ralf Joachim [ralf.joachim@syscon-world.de]
       Use ClassMolder.getLockEngine() instead of passing around LockEngine everywhere.
       Details: http://jira.codehaus.org/browse/CASTOR-1407
       (Ralf - 20060422)

JDO:   Fixed bug CASTOR-1402 using contribution from Werner Guttmann [werner.guttmann@gmx.net]
       Improved exception reporting for various JDO-related exceptions.
       Details: http://jira.codehaus.org/browse/CASTOR-1402
       (Werner - 20060422)
       
JDO:   Fixed bug CASTOR-1403 using contribution from Werner Guttmann [werner.guttmann@gmx.net]
       Fixed documentation for 'sortedset' collection type in the JDO mapping section.